-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.15.0
-
None
To reproduce:
1. Apply this patch https://codereview.qt-project.org/c/qt-creator/qt-creator/+/348660.
2. Load creator project into creator. Wait, until QML and C++ parsing finished. Open any qml file. Execute "Find References to Symbol Under Cursor" from popup menu.
3. As soon as you see the "Shutdown now" printout, close creator (or switch the session). It should crash.
The reason is that FindReferences::findUsages() installs the future watcher for the running task, but in case of shutdown it doesn't stop the running task.
BTW, the same happens when "Rename Symbol Under Cursor" is executed. The reason is then lack of synchronization in FindReferences::renameUsages().
- is required for
-
QTCREATORBUG-25709 Reduce crashes on exit / session switch
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-25711 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 348660,3 | WIP: Crash in FindReferences on shutdown | master | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
| 348672,4 | Fix a possible crash in FindReferences on shutdown | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |