Fix a possible crash in FindReferences on shutdown

Cancel and wait for all threads started by FindReferences
in its destructor.

Task-number: QTCREATORBUG-25711
Change-Id: I83c3ea832a173a7fff5c52e0c0136dfff2234afe
Reviewed-by: Eike Ziller <eike.ziller@qt.io>